# rouge-software

./: Cargo.toml  rustfmt.toml
src/: lib.rs  main.rs  reactive.rs
src/components/: app.rs  counter.rs
src/helpers/: widget_ext.rs
src/reactive/: callback.rs  component.rs  helpers.rs  scope.rs  vnode.rs  vstate.rs
src/reactive/vnode/: vcomponent.rs  vobject.rs  vprops.rs
src/reactive/vstate/: vcomponent_state.rs  vobject_state.rs
src/services/: flatpak.rs
