[package]
name = "rouge_software"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_6"] }
colored = "3.0.0"
futures = "0.3.31"
gtk4 = { version = "0.9.6", features = ["gnome_47"] }
log = "0.4.27"
subsecond = "=0.7.0-alpha.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
